--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,11 @@ jobs:
         with:
           go-version: ">=1.17.4"
 
+      - name: Install Dependencies
+        run: |
+            go mod download github.com/davecgh/go-spew
+            go mod download github.com/google/go-cmp
+
       - name: Test
         env:
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
